Fix incorrect wrapping of Case Study items

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -317,6 +317,10 @@
   }
   .company-profile-module-container {
     border: none;
+    &:nth-child(3n+1) {
+      clear: left;
+      margin-left: 0;
+    }
   }
   .company-profile-module-inner {
     padding: 0;
